--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fellas!</title>
+    <link rel="shortcut icon" href="resources/favicon/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="stylesheets/portfolio-style">
 </head>
 <body>
     
